//
// Copyright 2015, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package lobby.contracts.registration.order;

option java_package="lobby.contracts.registration.order";
option java_outer_classname = "RegistrationContractsEventsProto";
option java_multiple_files = true;

import "lobby/contracts/common/common.proto";
import "lobby/contracts/registration/registration.proto";
import "google/protobuf/timestamp.proto";
import "spine/money/money.proto";

// Order related

// The event propagated when an order is placed by a registrant.
message OrderPlaced {
    // The ID of the order.
    lobby.contracts.common.OrderId order_id = 1;

    // The ID of the related conference.
    lobby.contracts.common.ConferenceId conference_id = 2;

    // The order items representing the quantity of seats of different types at the conference.
    repeated lobby.contracts.registration.SeatQuantity seat = 3;

    // The expected expiration time if the reservation is not explicitly confirmed later.
    google.protobuf.Timestamp reservation_auto_expiration = 4;

    // The conference locator access code.
    lobby.contracts.registration.ConferenceAccessCode access_code = 5;
}

// The event propagated when an order is updated.
message OrderUpdated {
    // The ID of the order.
    lobby.contracts.common.OrderId order_id = 1;

    // The order items representing the quantity of seats of different types.
    repeated lobby.contracts.registration.SeatQuantity seat = 2;
}

// The event propagated when an order is partially reserved.
message OrderPartiallyReserved {
    // The ID of the order.
    lobby.contracts.common.OrderId order_id = 1;

    // The time of the reservation expiration.
    google.protobuf.Timestamp reservation_expiration = 2;

    // The order items representing the quantity of seats of different types.
    repeated lobby.contracts.registration.SeatQuantity seat = 3;
}

// The event propagated when an order reservation is completed.
message OrderReservationCompleted {
    // The ID of the order.
    lobby.contracts.common.OrderId order_id = 1;

    // The time of the reservation expiration.
    google.protobuf.Timestamp reservation_expiration = 2;

    // The order items representing the quantity of seats of different types.
    repeated lobby.contracts.registration.SeatQuantity seat = 3;
}

// The event propagated when an order is expired.
message OrderExpired {
    // The ID of the order.
    lobby.contracts.common.OrderId order_id = 1;
}

// The event propagated when an order is confirmed.
message OrderConfirmed {
    // The ID of the order.
    lobby.contracts.common.OrderId order_id = 1;
}

// The event propagated when a registrant is assigned to an order.
message OrderRegistrantAssigned {
    // The ID of the order.
    lobby.contracts.common.OrderId order_id = 1;

    // The personal info of the registrant.
    lobby.contracts.registration.PersonalInfo personal_info = 2;
}

// The event propagated when an order total price is calculated.
message OrderTotalsCalculated {
    // The ID of the order.
    lobby.contracts.common.OrderId order_id = 1;

    oneof payable {
        // The total price of the order.
        spine.money.Money total = 2;

        // If the order is free of charge.
        bool is_free_of_charge = 3;
    }

    // The lines of the order.
    repeated lobby.contracts.registration.SeatOrderLine order_line = 4;
}


// Seats related

// The event propagated when a seat assignment is created.
message SeatAssignmentsCreated {
    // The ID of the reservation.
    lobby.contracts.common.ReservationId reservation_id = 1;

    // The ID of the order.
    lobby.contracts.common.OrderId order_id = 2;

    // The short seat assignment info objects.
    repeated SeatAssignmentInfo seat = 3;

    // The short seat assignment info object.
    message SeatAssignmentInfo {
        // The position of the seat.
        lobby.contracts.registration.SeatPosition position = 1;

        // The ID of the seat type.
        lobby.contracts.registration.SeatTypeId seat_type_id = 2;
    }
}

// The event propagated when a seat assignment is updated.
message SeatAssignmentUpdated {
    // The ID of the reservation.
    lobby.contracts.common.ReservationId reservation_id = 1;

    // The position of the seat.
    lobby.contracts.registration.SeatPosition position = 2;

    // The personal info of the attendee.
    lobby.contracts.registration.PersonalInfo attendee = 3;
}

// The event propagated when a seat is assigned to an attendee.
message SeatAssigned {
    // The ID of the reservation.
    lobby.contracts.common.ReservationId reservation_id = 1;

    // The position of the seat.
    lobby.contracts.registration.SeatPosition position = 2;

    // The ID of the seat type.
    lobby.contracts.registration.SeatTypeId seat_type_id = 3;

    // The personal info of the attendee.
    lobby.contracts.registration.PersonalInfo attendee = 4;
}

// The event propagated when a seat is unassigned from an attendee.
message SeatUnassigned {
    // The ID of the reservation.
    lobby.contracts.common.ReservationId reservation_id = 1;

    // The position of the seat.
    lobby.contracts.registration.SeatPosition position = 2;
}
